objects/smlfcom__SMS_Page_Label_Desc_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>smlfcom__Chart_Label__c</fullName>
        <label>Chart Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Chart_Name__c</fullName>
        <label>Chart  Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Hover_accessible_to__c</fullName>
        <label>Hover accessible to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SMS Page Label Desc Mapping</label>
    <pluralLabel>SMS Page Label Desc Mappings</pluralLabel>
</CustomObject>